fix(CommandExecutionService): avoid persistent reader executor